styles/_homepage.scss
// main: base.scss

$homepage-logo-height: 10vh;
$homepage-logo-padding: 2vh;

#homepage {
    background: $neutral-light;
}

h1#logo {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 500;
    height: $homepage-logo-height;
    padding: $homepage-logo-padding;
    background-color: white;
    background-image: url(../assets/img/logo.png);
    background-size: contain;
    background-position: center left;
    background-repeat: no-repeat;
    background-origin: content-box;
    color: $primary-accent;
    font-size: 2rem;
    line-height: #{$homepage-logo-height - 2*$homepage-logo-padding};
    text-indent: #{$homepage-logo-height - $homepage-logo-padding};
}

#homepage-header {
    display: flex;
    flex-direction: row;
    height: 100vh;
    overflow: hidden;

    .homepage-tab {
        display: flex;
        position: relative;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        flex: 1;
        cursor: pointer;
        transition: flex $med-transition;

        &:hover {
            // flex: 5;
        }

        &#admin-tab {
            background-color: $primary-accent;
            color: $neutral-light;

            .tab-icon {
                transform: rotate(4deg);
                transition: transform $med-transition;
            }
            &:hover .tab-icon {
                transform: rotate(0deg);
                transition: transform $med-transition $med-transition;
            }
        }

        .tab-icon {
            $tab-icon-width: 18vw;

            width: $tab-icon-width;

            img {
                width: $tab-icon-width;
            }
        }

        .tab-name {
            font-size: 2.5rem;
        }

        .tab-button {
            display: inline-block;
            margin: 4rem 1rem 0;
            padding: 1rem;
            font-family: $display-font;
            font-size: 2rem;
            text-decoration: none;
            transform: skewX(-4deg);
            transition: background-color $med-transition, color $med-transition;

            .tab-button-text {
                display: block;
                transform: skewX(4deg);
            }
        }
        &:hover .tab-button.default-link, .tab-button:hover {
            background-color: $neutral-dark;
            color: $neutral-light;
        }
        .tab-button, &:hover .tab-button.default-link.not-selected {
            background-color: $main-color;
            color: $neutral-dark;
        }
    } // end .homepage-tab

    .divider {
        position: relative;
        flex: 0;

        &:after {
            content: '';
            position: absolute;
            left: 0;
            right: 0;
            top: -25vh;
            bottom: -25vh;
            z-index: 100;
            width: 8vw;
            border-style: dashed;
            border-width: 0;
            transform: translateX(-50%) rotate(4deg);
        }

        &.start:after {
            border-color: $main-color;
            border-right-width: 2px;
        }

        &.middle:after {
            background-color: $secondary-accent;
            transition: width $med-transition;
        }

        &.end:after {
            border-color: $neutral-light;
            border-left-width: 2px;
        }
    } // end .divider
    &:hover .divider.middle:after {
        // width: 6vw; // Shrink middle divider when hovered over either tab
    }

} // end #homepage-header

// --------------------------------------------------
// Responsive Styles
// --------------------------------------------------

@media screen and (max-width: 900px) {

    #homepage-header {
        flex-direction: column;
        height: auto;

        .homepage-tab {
            flex: auto;

            &:hover {
                flex: auto;
            }

            &#parents-tab {
                padding: 12vh 0;
            }

            &#admin-tab {
                padding: 12vh 0;
                min-height: 100vh;

                .tab-icon {
                    transform: rotate(0deg);
                }
            }

            .tab-icon {
                width: auto;
                height: 25vh;
            }

            .tab-name {
                font-size: 3rem;
            }

            .tab-button {
                display: block;
                margin: 2rem 0;
            }
        } // end .homepage-tab

        .divider {

            &:after {
                left: -25vw;
                right: -25vw;
                top: 0;
                bottom: auto;
                height: 12vh;
                width: auto;
                transform: translateY(-50%) rotate(-4deg);
            }

            &.start:after {
                content: none;
                // height: 8vh;
                // border-right-width: 0;
                // border-bottom-width: 2px;
            }

            &.end:after {
                border-left-width: 0;
                border-top-width: 2px;
            }
        } // end .divider
        &:hover .divider.middle:after {
            width: auto;
        }
    }
}

@media screen and (max-width: 700px) {
    h1#logo {
        height: 10vh;
        padding: 1vh;
        font-size: 1.5rem;
        line-height: 8vh;
        text-indent: 10vh;
    }
}

@media screen and (max-width: 400px) {
    h1#logo {
        font-size: 1.25rem;
    }

    #homepage-header {
        .homepage-tab {
            .tab-name {
                font-size: 2rem;
            }
            .tab-button {
                font-size: 1.25rem;
            }
        }
    }
}

